用户空间模块