@@ -3,19 +3,20 @@ package com.guang.campuspicturebackend.service.impl;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.ObjUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.json.JSONUtil;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.guang.campuspicturebackend.common.DeleteRequest;
 import com.guang.campuspicturebackend.constant.MinioConstant;
 import com.guang.campuspicturebackend.exception.CustomException;
 import com.guang.campuspicturebackend.exception.ErrorCode;
 import com.guang.campuspicturebackend.exception.ThrowUtils;
+import com.guang.campuspicturebackend.manager.MinioManager;
 import com.guang.campuspicturebackend.manager.upload.PictureUploadTemplate;
-import com.guang.campuspicturebackend.model.dto.picture.PictureUploadRequest;
-import com.guang.campuspicturebackend.model.dto.picture.PictureQueryRequest;
-import com.guang.campuspicturebackend.model.dto.picture.PictureReviewRequest;
-import com.guang.campuspicturebackend.model.dto.picture.PictureUploadByBatchRequest;
+import com.guang.campuspicturebackend.model.dto.picture.*;
 import com.guang.campuspicturebackend.model.entity.Picture;
+import com.guang.campuspicturebackend.model.entity.Space;
 import com.guang.campuspicturebackend.model.entity.User;
 import com.guang.campuspicturebackend.model.enums.ReviewStatus;
 import com.guang.campuspicturebackend.model.vo.PictureVO;
@@ -23,6 +24,7 @@ import com.guang.campuspicturebackend.model.vo.UploadPictureResult;
 import com.guang.campuspicturebackend.model.vo.UserVO;
 import com.guang.campuspicturebackend.service.PictureService;
 import com.guang.campuspicturebackend.mapper.PictureMapper;
+import com.guang.campuspicturebackend.service.SpaceService;
 import com.guang.campuspicturebackend.service.UserService;
 import jakarta.annotation.Resource;
 import jakarta.servlet.http.HttpServletRequest;
@@ -33,6 +35,8 @@ import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import java.io.IOException;
 import java.util.*;
@@ -49,6 +53,8 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
 
     @Resource
     private UserService userService;
+    @Resource
+    private SpaceService spaceService;
 
     @Resource
     private PictureUploadTemplate filePictureUpload;
@@ -56,23 +62,57 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
     @Resource
     private PictureUploadTemplate urlPictureUpload;
 
+    @Resource
+    private MinioManager minioManager;
+
+    @Resource
+    private TransactionTemplate transactionTemplate;
 
     @Override
     public PictureVO uploadPicture(Object fileResource, PictureUploadRequest request, User loginUser) {
-        // 判断图片是新增还是更新
-        Long pictureId = null;
-        if (request != null) {
-            pictureId = request.getId();
+        ThrowUtils.throwIf(request == null, ErrorCode.PARAMS_ERROR);
+        ThrowUtils.throwIf(loginUser == null, ErrorCode.NOT_LOGIN_ERROR);
+        Long spaceId = request.getSpaceId();
+        if (spaceId != null) {
+            Space space = spaceService.getById(spaceId);
+            ThrowUtils.throwIf(space == null, ErrorCode.NOT_FOUND_ERROR, "空间不存在");
+            if (!Objects.equals(loginUser.getId(), space.getUserId())) {
+                throw new CustomException(ErrorCode.NO_AUTH_ERROR, "没有空间权限");
+            }
+            // 空间额度校验
+            if (space.getTotalCount() >= space.getMaxCount()) {
+                throw new CustomException(ErrorCode.OPERATION_ERROR, "空间条数不足");
+            }
+            if (space.getTotalSize() >= space.getMaxSize()) {
+                throw new CustomException(ErrorCode.OPERATION_ERROR, "空间容量不足");
+            }
         }
+        // 判断图片是新增还是更新
+        Long pictureId = request.getId();
         // 如果更新图片判断图片是否存在
         if (pictureId != null) {
-            Picture picture = this.getById(pictureId);
-            ThrowUtils.throwIf(picture == null, ErrorCode.NOT_FOUND_ERROR, "图片不存在");
-            ThrowUtils.throwIf(!Objects.equals(picture.getUserId(), loginUser.getId()) || !userService.isAdmin(loginUser), ErrorCode.NO_AUTH_ERROR);
+            Picture oldPicture = this.getById(pictureId);
+            ThrowUtils.throwIf(oldPicture == null, ErrorCode.NOT_FOUND_ERROR, "图片不存在");
+            ThrowUtils.throwIf(!Objects.equals(oldPicture.getUserId(), loginUser.getId()) || !userService.isAdmin(loginUser), ErrorCode.NO_AUTH_ERROR);
+
+            if (spaceId == null) {
+                if (oldPicture.getSpaceId() != null) {
+                    spaceId = oldPicture.getSpaceId();
+                }
+            } else {
+                if (ObjUtil.notEqual(spaceId, oldPicture.getSpaceId())) {
+                    throw new CustomException(ErrorCode.PARAMS_ERROR, "空间id不一致");
+                }
+            }
         }
         // 上传图片 得到图片信息
         Long userId = loginUser.getId();
         String prefix = String.format("%s/%s", MinioConstant.PUBLIC_PREFIX, userId);
+        // 如果填写了空间id 那么将图片上传到空间隔离开来
+        if (spaceId != null) {
+            prefix = String.format("%s/%s", MinioConstant.SPACE_PREFIX, userId);
+        }
+
         PictureUploadTemplate fileManager = filePictureUpload;
         if (fileResource instanceof String) {
             fileManager = urlPictureUpload;
@@ -81,20 +121,35 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
         // 封装入库信息
         Picture picture = new Picture();
         BeanUtils.copyProperties(uploadResult, picture);
-        if (request != null && StrUtil.isNotBlank(request.getFileName())) {
+
+        if (StrUtil.isNotBlank(request.getFileName())) {
             picture.setName(request.getFileName());
         }
         picture.setUserId(userId);
+        picture.setSpaceId(spaceId);
         // 填充审核信息
         this.fillReviewInfo(picture, loginUser);
         if (pictureId != null) {
             picture.setId(pictureId);
             picture.setEditTime(new Date());
         }
-        boolean b = this.saveOrUpdate(picture);
-        ThrowUtils.throwIf(!b, ErrorCode.OPERATION_ERROR, "图片上传失败");
-        picture = this.getById(picture.getId());
-        return PictureVO.objToVO(picture);
+        Long finalSpaceId = spaceId;
+        transactionTemplate.execute(status -> {
+            boolean b = this.saveOrUpdate(picture);
+            ThrowUtils.throwIf(!b, ErrorCode.OPERATION_ERROR, "图片上传失败");
+            // 上传图片成功后更新空间额度
+            if (finalSpaceId != null) {
+                boolean updated = spaceService.lambdaUpdate()
+                        .eq(Space::getId, finalSpaceId)
+                        .setSql("total_size = total_size + " + picture.getPicSize())
+                        .setSql("total_count = total_count + 1")
+                        .update();
+                ThrowUtils.throwIf(!updated, ErrorCode.OPERATION_ERROR, "额度更新失败");
+            }
+            return picture;
+        });
+        Picture newPicture = this.getById(picture.getId());
+        return PictureVO.objToVO(newPicture);
     }
 
     @Override
@@ -125,7 +180,7 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
             Long userId = pictureVO.getUserId();
             User user = null;
             if (users.containsKey(userId)) {
-                user = users.get(userId).get(0);
+                user = users.get(userId).getFirst();
             }
             pictureVO.setUser(userService.getUserVO(user));
         }
@@ -172,6 +227,8 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
         Long reviewId = request.getReviewId();
         String orderFiled = request.getOrderFiled();
         String sortOrder = request.getSortOrder();
+        Long spaceId = request.getSpaceId();
+        boolean nullSpaceId = request.isNullSpaceId();
 
         if (StrUtil.isNotBlank(searchText)) {
             wrapper.and(v -> v.like("name", searchText).or().like("introduction", searchText));
@@ -189,6 +246,8 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
         wrapper.eq(ObjUtil.isNotEmpty(userId), "user_id", userId);
         wrapper.eq(ObjUtil.isNotEmpty(reviewStatus), "review_status", reviewStatus);
         wrapper.eq(ObjUtil.isNotEmpty(reviewId), "review_id", reviewId);
+        wrapper.eq(ObjUtil.isNotEmpty(spaceId), "space_id", spaceId);
+        wrapper.isNull(nullSpaceId, "space_id");
         if (CollUtil.isNotEmpty(tags)) {
             for (String tag : tags) {
                 wrapper.like("tags", "\"" + tag + "\"");
@@ -281,7 +340,7 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
                 log.info("图片上传成功, id={}", pictureVO.getId());
                 uploadCount++;
             } catch (Exception e1) {
-                log.error("上传文件失败",e1);
+                log.error("上传文件失败", e1);
                 continue;
             }
             if (uploadCount >= count) {
@@ -289,6 +348,77 @@ public class PictureServiceImpl extends ServiceImpl<PictureMapper, Picture> impl
             }
         }
         return uploadCount;
+    }
+
+    @Override
+    public void checkPictureAuth(Picture picture, User loginUser) {
+        Long spaceId = picture.getSpaceId();
+        if (spaceId == null) {
+            if (!picture.getUserId().equals(loginUser.getId()) && !userService.isAdmin(loginUser)) {
+                throw new CustomException(ErrorCode.NO_AUTH_ERROR);
+            }
+        } else {
+            if (!picture.getUserId().equals(loginUser.getId())) {
+                throw new CustomException(ErrorCode.NO_AUTH_ERROR);
+            }
+        }
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void deletePicture(DeleteRequest deleteRequest, User loginUser) {
+        long id = deleteRequest.getId();
+        Picture oldPicture = this.getById(id);
+        ThrowUtils.throwIf(oldPicture == null, ErrorCode.NOT_FOUND_ERROR);
+        this.checkPictureAuth(oldPicture, loginUser);
+        checkPictureAuth(oldPicture, loginUser);
+        transactionTemplate.execute(status -> {
+            boolean res = this.removeById(id);
+            ThrowUtils.throwIf(!res, ErrorCode.OPERATION_ERROR, "删除失败");
+            Long spaceId = oldPicture.getSpaceId();
+            if (spaceId != null) {
+                boolean updated = spaceService.lambdaUpdate()
+                        .eq(Space::getId, spaceId)
+                        .setSql("total_size = total_size  " + oldPicture.getPicSize())
+                        .setSql("total_count = total_count - 1")
+                        .update();
+                ThrowUtils.throwIf(!updated, ErrorCode.OPERATION_ERROR, "空间额度更新失败");
+            }
+            return true;
+        });
+        clearPictureFile(oldPicture);
+    }
+
+    @Override
+    public void clearPictureFile(Picture picture) {
+        Thread.startVirtualThread(() -> {
+            String url = picture.getUrl();
+            String objectName = url.substring(url.indexOf('/') + 1);
+            minioManager.deleteResource(MinioConstant.BUCKET_NAME, objectName);
+        });
+    }
+
+    @Override
+    public void editPicture(PictureEditRequest pictureEditRequest, HttpServletRequest request) {
+        Picture picture = new Picture();
+        BeanUtils.copyProperties(pictureEditRequest, picture);
+        picture.setTags(JSONUtil.toJsonStr(pictureEditRequest.getTags()));
+        picture.setEditTime(new Date());
+        this.validPicture(picture);
+        User loginUser = userService.getLoginUser(request);
+        Long id = pictureEditRequest.getId();
+        Picture oldPicture = this.getById(id);
+        ThrowUtils.throwIf(oldPicture == null, ErrorCode.NOT_FOUND_ERROR);
+
+        checkPictureAuth(picture, loginUser);
+        // 填充审核参数
+        this.fillReviewInfo(picture, loginUser);
+        // 更新数据库
+        if (!oldPicture.getUserId().equals(loginUser.getId()) && !userService.isAdmin(loginUser)) {
+            throw new CustomException(ErrorCode.NO_AUTH_ERROR);
+        }
+        boolean result = this.updateById(picture);
+        ThrowUtils.throwIf(!result, ErrorCode.OPERATION_ERROR);
     }
 }
 
